# keyking

./: .gitignore  README.md  SECURITY.md  test.cmd  test_groq.js  test_groq_req.sh
.antigravitycli/: 4aa17450-228f-439d-a733-0540cc1dc660.json
.github/workflows/: ci.yml  npm-publish.yml  release.yml
apps/control-plane/: .env.example  requirements.txt
apps/control-plane/app/: main.py
apps/control-plane/app/routers/: anomaly.py  billing.py  machines.py  quota.py
apps/demo/: package.json  test-sdk.mjs
apps/demo/src/app/: globals.css  layout.tsx  page.tsx
apps/desktop/: index.html  package.json  tailwind.config.cjs  updater.key.pub  vite.config.ts
apps/desktop/public/: landing.html
apps/desktop/src/: App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  test_sse.sh
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  main.rs
apps/desktop/src-tauri/src/adapters/: anthropic.rs  groq.rs  mod.rs  openai.rs
apps/desktop/src-tauri/src/proxy/: anthropic.rs  mod.rs  router.rs
apps/desktop/src-tauri/src/quota/: mod.rs
apps/desktop/src-tauri/src/vault/: crypto.rs  crypto_test.rs  mod.rs
apps/sdk/: README.md  keyking-sdk-2.1.0.tgz  package.json  test.js  tsconfig.json
apps/sdk/src/: index.ts  quota.ts  router.ts  types.ts  vault.ts
apps/web/: fix_responsive.js  package.json  tailwind.config.ts  test_auth.js  test_flag.js
apps/web/prisma/: schema.prisma
apps/web/public/: install.ps1  install.sh
tests/benchmarks/: latency.js
(+52 files in other folders)
