[package]
name = "keyking"
version = "1.1.0"
description = "Universal API Gateway"
authors = ["keyking"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
axum = "0.7"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
once_cell = "1"
machine-uid = "0.6"
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
futures = "0.3"
