[package]
name = "keyking"
version = "2.0.0"
description = "Universal API Gateway"
authors = ["keyking"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
axum = "0.7"
tokio = { version = "2.0.0"] }
reqwest = { version = "2.0.0"] }
serde = { version = "2.0.0"] }
serde_json = "1"
thiserror = "1"
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
once_cell = "1"
machine-uid = "0.6"
uuid = { version = "2.0.0"] }
base64 = "0.22"
futures = "0.3"
